<resources>
    <string name="app_name">SolveExample</string>
    <string name="total_solved">Итого решено примеров</string>
    <string name="incorrect">Неправильно</string>
    <string name="correct">Правильно</string>
    <string name="start">Старт</string>
    <string name="check">Проверка</string>
    <string name="time">ВРЕМЯ(сек)</string>
    <string name="min_time">Минимум</string>
    <string name="max_time">Максимум</string>
    <string name="avg_time">Среднее</string>
</resources>